# MyTerminal

./: .gitignore  README.md  README.zh-CN.md  README_CN.md  START_BUILD.md  finalshell_research.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-cli-sidecar.mjs  check-bundle-memory.mjs  check-env.ps1  check-perl.ps1  check-rust.ps1  generate-star-history.mjs  measure-memory.ps1  sync-version.mjs
src/: App.tsx  CustomSelect.tsx  MonacoEditor.tsx  TerminalWorkspace.tsx  UpdateModal.tsx  backend.ts  clipboard.ts  i18n.ts  store.ts  types.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_bridge.rs  commands.rs  crypto.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  storage.rs  webdav.rs
src-tauri/src/application/services/: agent_bridge_service.rs  config_service.rs  connection_service.rs  file_service.rs  history_service.rs  mod.rs  session_service.rs  tunnel_service.rs  update_service.rs  webdav_service.rs
src-tauri/src/domain/: entities.rs  errors.rs  mod.rs  repositories.rs  services.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/agent_bridge/: execution.rs  mod.rs  request.rs  runtime.rs  server.rs  types.rs
src-tauri/src/infrastructure/crypto/: crypto_service.rs  mod.rs
src-tauri/src/infrastructure/persistence/: mod.rs  storage_service.rs  stored_types.rs
src-tauri/src/infrastructure/ssh/: connection.rs  mod.rs  session.rs  sftp.rs  tunnel.rs
src-tauri/src/infrastructure/webdav/: mod.rs  webdav_service.rs
src-tauri/src/interface/: dto.rs
(+4 files in other folders)
