[package]
name = "myterminal"
# Rust crate 版本由 scripts/sync-version.mjs 从根 package.json 同步，保持后端 env!("CARGO_PKG_VERSION") 和发布版本一致。
version = "0.3.3"
description = "A modern Rust + Tauri 2 remote terminal manager inspired by FinalShell"
authors = ["OpenAI"]
edition = "2021"
# 项目同时包含桌面主程序和 myterminal-cli；Tauri dev 默认 cargo run 时必须明确主程序。
default-run = "myterminal"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
libc = "0.2"
rand = "0.8"
portable-pty = "0.9"
notify-rust = "4.18"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
thiserror = "1"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
